Update for Presentation 2

--- a/about.html
+++ b/about.html
@@ -10,15 +10,19 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>   
-                <li><a href="events.html">Events</a></li>
-                <li><a href="about.html">About</a></li>
-
+                <li style="float: left;"><a href="index.html"><div class="logo">Choice</div></a></li>
+                <li style="float: inline-start;"><a href="events.html">Events</a></li>
+                <li style="float: inline-start;"><a href="officehours.html">Office Hours</a></li>
+                <li style="float: inline-start;"><a href="about.html">About</a></li>
+                <li style="float: right;">Notifications</li>
+                <li style="float: right;">Profile</li>
             </ul>
         </nav>
     </header>
     <body>
-        <main>
-            <p>Nothing to see yet...</p>    <!--A brief overview of what the site does and the reasoning behind its creattion-->
+        <main class="container">
+            <p style="font-size: large;">Welcome to CHOICE, your ultimate destination for scheduling office hours and finding campus and community events near you! Our mission is to streamline the discovery of campus events and scheduling office hours with faculty members. Whether you're a student, or a member of the Americus community, CHOICE offers resources, information, and community engagement opportunities tailored to your needs.</p>    <!--A brief overview of what the site does and the reasoning behind its creattion-->
+
+
         </main>
     </body>
