--- a/chat.html
+++ b/chat.html
@@ -1,5 +1,4 @@
-<section id="events">
-    <!--This is not the final results btu only a starting point-->
+<!--This is not the final results btu only a starting point-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,22 +19,19 @@
             </ul>
         </nav>
     </header>
-    
+
     <main class="container">
-        <h3>Upcoming Events</h3>  
-        <div class="block">
-          <h3>March 31st, 2024</h3>
-          <img src="Photos/Events/RegistrationParty.jpg">
-          <p>Registration Party</p>
+        
+        <div class="chat" style="background-color: #C69214; padding: 20px;">
+            <div id="messageArea" class="messageArea" style="background-color: lightgray; height: 500px; text-align: left;">
+                <p>Welcome to C.H.O.I.C.E. bot. Please answer the following questions to find an event that is catered to you.</p>
+            </div>
+            <form style="padding: 20px;">
+                <input type="text" name="" placeholder="Message..." id="userMessage">
+                <input type="submit" name="" value="Send">
+            </form>
+            <a href="events.html"><h6>Go back to Events page.</h6></a>  
         </div>
-        <div class="block">
-          <h3>April 1st, 2024</h3>
-          <img src="Photos/Events/MovieNight.png">
-          <p>Movie Night</p>
-        </div>
-        <a href="chat.html"><h3>Interact with our C.H.O.I.C.E. chatbot to find an event for you.</h3></a>
-</section>
-</main>
 
         <footer>
                 <p style="font-size: small;">Contact Us: <a style="color: #C69214;" href="jgreen36@radar.gsw.edu">Jaylyn Green</a> or <a style="color: #C69214;" href="tpowel11@radar.gsw.edu">Tanner Powell</a></p>
