--- a/officehours.html
+++ b/officehours.html
@@ -1,5 +1,4 @@
-<section id="events">
-    <!--This is not the final results btu only a starting point-->
+<!--This is not the final results btu only a starting point-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,22 +19,9 @@
             </ul>
         </nav>
     </header>
-    
+
     <main class="container">
-        <h3>Upcoming Events</h3>  
-        <div class="block">
-          <h3>March 31st, 2024</h3>
-          <img src="Photos/Events/RegistrationParty.jpg">
-          <p>Registration Party</p>
-        </div>
-        <div class="block">
-          <h3>April 1st, 2024</h3>
-          <img src="Photos/Events/MovieNight.png">
-          <p>Movie Night</p>
-        </div>
-        <a href="chat.html"><h3>Interact with our C.H.O.I.C.E. chatbot to find an event for you.</h3></a>
-</section>
-</main>
+        Office Hours Page
 
         <footer>
                 <p style="font-size: small;">Contact Us: <a style="color: #C69214;" href="jgreen36@radar.gsw.edu">Jaylyn Green</a> or <a style="color: #C69214;" href="tpowel11@radar.gsw.edu">Tanner Powell</a></p>
