Updates for Presentation2

--- a/events.html
+++ b/events.html
@@ -1,4 +1,5 @@
-<!--This is not the final results btu only a starting point-->
+<section id="events">
+    <!--This is not the final results btu only a starting point-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,15 +11,35 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>   
-                <li><a href="events.html">Events</a></li>
-                <li><a href="about.html">About</a></li>
-
+                <li style="float: left;"><a href="index.html"><div class="logo">Choice</div></a></li>
+                <li style="float: inline-start;"><a href="events.html">Events</a></li>
+                <li style="float: inline-start;"><a href="officehours.html">Office Hours</a></li>
+                <li style="float: inline-start;"><a href="about.html">About</a></li>
+                <li style="float: right;">Notifications</li>
+                <li style="float: right;">Profile</li>
             </ul>
         </nav>
     </header>
-    <body>
-        <main>
-            <p>Nothing to see yet...</p>    <!--This will display an expanded view of the events-->
-        </main>
-    </body>
+    
+    <main class="container">
+        <h3>Upcoming Events</h3>  
+        <div class="block">
+          <h3>March 31st, 2024</h3>
+          <img src="Photos/Events/RegistrationParty.jpg">
+          <p>Registration Party</p>
+        </div>
+        <div class="block">
+          <h3>April 1st, 2024</h3>
+          <img src="Photos/Events/MovieNight.png">
+          <p>Movie Night</p>
+        </div>
+        <a href="chat.html"><h3>Interact with our C.H.O.I.C.E. chatbot to find an event for you.</h3></a>
+</section>
+</main>
+
+        <footer>
+                <p style="font-size: small;">Contact Us: <a style="color: #C69214;" href="jgreen36@radar.gsw.edu">Jaylyn Green</a> or <a style="color: #C69214;" href="tpowel11@radar.gsw.edu">Tanner Powell</a></p>
+        </footer>
+    </main>
+</body>
+</html>
